[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["w <weverhall@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
